# Tester

./: .gitignore  .gitmodules  ABOUT.txt  README.md
.run/: Example.run.xml  Tests.run.xml  Tryout.run.xml
Recipes/: install.sh  prepare.sh
Tests/: CMakeLists.txt  DummyDataTestCase.cpp  DummyDataTestCase.h  DummyTest.cpp  DummyTest.h  DummyTestCase.cpp  DummyTestCase.h  DummyTestCaseData.cpp  DummyTestCaseData.h  main.cpp
Upstreams/: GitFlic.sh  GitHub.sh
Version/: version.sh
